    set or sharded cluster in parallel, so long as it uses OpenSSL or Windows
    SChannel. (SSL handshakes with Apple's Secure Transport are still serial.)
    A larger receive buffer with SChannel increases performance over slow
    connections.
  * All functions that accept read concern now prohibit it if MongoDB is too
    old to support it (pre-3.2).
  * mongoc_collection_find_and_modify_with_opts now prohibits write concern if
    MongoDB is too old to support it (pre-3.2).
  * Other helper functions for commands that write, now prohibit write concern
    if MongoDB is too old to support it (pre-3.4):
      mongoc_client_read_write_command_with_opts
      mongoc_client_write_command_with_opts
      mongoc_collection_read_write_command_with_opts
      mongoc_collection_write_command_with_opts
      mongoc_database_read_write_command_with_opts
      mongoc_database_write_command_with_opts
      mongoc_collection_aggregate with $out
      mongoc_collection_drop_index_with_opts
      mongoc_collection_drop_with_opts
      mongoc_collection_rename_with_opts
      mongoc_database_drop_with_opts
    Write concern behavior is unchanged for regular CRUD functions.
  * Setting a negative writeConcern level of -2 or smaller, via the "opts"
    parameter to functions that accept BSON options, is now prohibited. The
    special "w" values -2 through -4 are only used internally. The deprecated
    "w=-1" is still allowed, as a synonym for "w=0".
  * The Kerberos URI option authMechanismProperties=CANONICALIZE_HOST_NAME:true
    is now implemented with the Windows Kerberos provider, SSPI.
  * IPv6 is now fully supported and conforms to RFC-6555. If a hostname has both
    IPv4 and IPv6 DNS records, the driver tries connecting with IPv6 first. If a
    connection can't be established after 250ms then IPv4 is tried in parallel.
    Whichever succeeds connection first cancels the other. The successful DNS
    result is cached for 10 minutes.